fix copied toast z-index

--- a/frontend/src/styles/Modal/ChannelModal.css
+++ b/frontend/src/styles/Modal/ChannelModal.css
@@ -72,7 +72,7 @@
     border-radius: 6px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.75);
     font-size: 16px;
-    z-index: 10;
+    z-index: 102;
     transition: opacity 1s;
 }
 
